--- a/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderSummary/Default.cshtml
@@ -52,8 +52,6 @@
                                 </div>
 
                                 <zone name="order_summary_totals_after" />
-
-                                <hr class="mt-2 mb-3" />
                             </div>
                             <div class="col-12 cart-footer-group" sm-suppress-if-empty>
                                 @if (Model.IsEditable)
@@ -74,7 +72,7 @@
                                     </div>
                                 }
                             </div>
-                            <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-group">
+                            <div sm-if="Model.IsEditable" class="col-12 mt-3 cart-footer-actions">
                                 <zone name="order_summary_buttons_before" />
 
                                 <div class="cart-buttons">
