--- a/src/Smartstore.Web/wwwroot/lib/bs4/scss/_alert.scss
+++ b/src/Smartstore.Web/wwwroot/lib/bs4/scss/_alert.scss
@@ -57,6 +57,7 @@
     z-index: 2;
     padding-block: calc(var(--alert-padding-y) * 1);
     padding-inline: var(--alert-padding-x);
+    height: calc(1em * #{$line-height-base}); // Center vertically if only 1 line exists
   }
 }
 
