--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -180,6 +180,7 @@
     --cart-footer-bg: #{$cart-footer-bg};
     --cart-child-row-bg: #{tint-color($gray-100, 40%)};
 
+    --pd-finalprice-font-size: 1.25rem;
     --pd-finalprice-color: inherit;
     --pd-finalprice-offer-color: inherit;
     --pd-offer-muted-color: var(--gray-650, var(--gray-600));
@@ -341,6 +342,8 @@
 
 .cart-row-child {
     --cart-item-title-font-size: #{$font-size-base};
+    --pd-finalprice-font-size: 1rem;
+    --pd-offer-font-size-sm: #{$font-size-xs};
 
     font-size: 90%;
     background: var(--cart-child-row-bg);
@@ -364,6 +367,23 @@
 
     .alert {
         --alert-border-color: #{rgba($black, 0.08)};
+    }
+}
+
+.cart-footer-group + .cart-footer-group {
+    position: relative;
+    padding-top: 1rem;
+    margin-top: 0.5rem;
+
+    &:before {
+        // Divider
+        position: relative;
+        display: block;
+        width: 100%;
+        height: 1px;
+        top: -1rem;
+        content: ' ';
+        background-color: rgba($black, 0.08);
     }
 }
 
