Theming: responsive and collapsible MyAccount menu

--- a/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_MyAccount.cshtml
@@ -11,7 +11,7 @@
                     <zone name="myaccount_menu_before" />
                 </div>
 
-                <div class="card my-account-menu nav-collapsible nav-collapsible-card">
+                <div class="card my-account-menu nav-collapsible">
                     <div class="card-header p-2 nav-toggler collapsed" data-toggle="collapse" data-target="#myaccount-menu" aria-controls="myaccount-menu" aria-expanded="false">
                         @await Component.InvokeAsync("MyAccountHeader")
                     </div>
