--- a/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
+++ b/src/Smartstore.Web/Themes/Flex/wwwroot/_cart.scss
@@ -202,6 +202,7 @@
 }
 
 .cart-row {
+    position: relative;
     padding: var(--cart-row-padding-y) var(--cart-row-padding-x);
 
     &:not(:first-child) {
